cmake_minimum_required(VERSION 3.16)
project(nowCoder)

set(CMAKE_CXX_STANDARD 20)

add_executable(nowCoder main.cpp src/20200529/01lastStringlength.cpp src/20200529/02paly.cpp src/20200529/03paly.cpp src/20200529/04paly.cpp src/20200530/05play.cpp src/20200530/06paly.cpp src/20200530/07paly.cpp src/20200530/08paly.cpp src/20200530/09Play.cpp src/20200530/10play.cpp src/20200530/11paly.cpp src/20200530/12paly.cpp src/20200530/13paly.cpp src/20200530/14paly.cpp)