cmake_minimum_required(VERSION 3.16)
project(nowCoder)

set(CMAKE_CXX_STANDARD 20)

add_executable(nowCoder main.cpp src/20200529/01lastStringlength.cpp src/20200529/02paly.cpp src/20200529/03paly.cpp src/20200529/04paly.cpp src/20200530/05play.cpp src/20200530/06paly.cpp src/20200530/07paly.cpp src/20200530/08paly.cpp src/20200530/09Play.cpp src/20200530/10play.cpp src/20200530/11paly.cpp src/20200530/12paly.cpp src/20200530/13paly.cpp src/20200530/15paly.cpp src/20200530/16paly.cpp src/20200531/17paly.cpp src/20200531/18paly.cpp src/20200531/19paly.cpp src/20200531/20paly.cpp src/20200531/21paly.cpp src/20200531/22paly.cpp src/20200531/23paly.cpp src/20200531/24paly.cpp src/20200601/25paly.cpp src/20200601/26paly.cpp src/20200601/27paly.cpp src/20200601/28paly.cpp src/20200601/29paly.cpp src/20200601/30Paly.cpp src/20200601/31paly.cpp src/20200601/32paly.cpp src/20200601/33paly.cpp src/20200601/34paly.cpp src/20200601/35paly.cpp src/20200601/36paly.cpp src/20200601/37paly.cpp src/20200601/38paly.cpp src/20200601/39paly.cpp src/20200601/40paly.cpp)